popup/infoscreen: min-height for images when flashy news is on, prevents overlapping text

--- a/less/popup.less
+++ b/less/popup.less
@@ -256,6 +256,7 @@ body {
       .post {
         .item {
           img.regular {
+            min-height: 80px;
             max-height: 200px;
             margin: 0 7px 4px 0;
           }
@@ -294,6 +295,7 @@ body {
         }
 
         img {
+          min-height: 80px;
           max-height: 200px;
           padding: 4px;
           box-shadow: 0 0 13px #bbb;
